# webrtc-screen-share

./: .gitmodules  CMakeLists.txt  CMakePresets.json  build.bat  build.sh  imgui.ini  run.bat
src/: App.cpp  App.h  CMakeLists.txt
src/audio/: CMakeLists.txt
src/capture/: CMakeLists.txt  GraphicsCaptureFactory.cpp  GraphicsCaptureFactory.h  IGraphicsCapture.cpp  IGraphicsCapture.h
src/capture/linux/: LinuxGraphicsCapture.h
src/capture/macos/: MacOSGraphicsCapture.h
src/capture/windows/: WindowsGraphicsCapture.cpp  WindowsGraphicsCapture.h
src/platform/: CMakeLists.txt  IRenderer.cpp  IRenderer.h  ITexture.cpp  ITexture.h  IWindow.cpp  IWindow.h  ImGuiManager.cpp  ImGuiManager.h  Logger.h  TextureFactory.cpp  TextureFactory.h  WindowFactory.cpp  WindowFactory.h
src/platform/windows/: D3D11Renderer.cpp  D3D11Renderer.h  D3D11Texture.cpp  D3D11Texture.h  Win32Window.cpp  Win32Window.h
